# rickroller

./: .env-local  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  gunicorn.conf.py  pyproject.toml  requirements.txt  server.py  setup.py  version.txt
.github/workflows/: build.yaml  cleanup-registry.yaml  deploy-cloud-run.yaml  release-please.yaml  reusable_docker-build-and-push.yaml
docs/: persistence.md  quickstart.md  rickrolling.md
rickroll/: __init__.py  __main__.py  log.py  rickroller.py
rickroll/assets/: style.css
rickroll/db/: __init__.py  mongo.py  orm.py  persistence.py  sql.py
rickroll/templates/: index.html  rolled.html
tests/: conftest.py  persistence_test.py  rickroller_test.py
