[tool.poetry]
name = "rickroll"
version = "0.1.1"
description = ""
authors = ["derlin"]

[tool.poetry.scripts]
rickroll = "rickroll.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"

beautifulsoup4 = "^4.11"
requests = "^2.28"
validators = "^0.20"
Flask = "^2.2"
SQLAlchemy = "^1.4"
psycopg2-binary = "^2.9"
Flask-APScheduler = "^1.12"
pymongo = "^4.3.3"
flask-wtf = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
mongomock = "^4"
ruff = "*"

[tool.ruff]
line-length = 100 # use  black --line-length 100 --experimental-string-processing rickroll
# See https://beta.ruff.rs/docs/rules
select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "A",   # flakes8-builtins
    "COM", # flakes8-commas
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8 naming
    "UP",  # pyupgrade
    "S",   # bandit
]
